force-app/main/default/objects/Discount_Approval_Matrix__c/Discount_Approval_Matrix__c.object-meta.xml
<CustomObject>
    <label>Discount Approval Matrix</label>
    <nameField>
        <displayFormat>DAM-{0000}</displayFormat>
        <label>Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>