force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Approval level (1=Team Lead, 2=Manager, 3=Director, etc.)</description>
    <label>Approval Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>