force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Approval_Threshold__c</fullName>
    <description>Threshold value beyond which this approval level is triggered</description>
    <label>Approval Threshold</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>