force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <description>Role of the approver for this level</description>
    <label>Approver Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>