force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific user assigned as approver for this level</description>
    <label>Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Approval_Matrix_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>