force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delegated approver who can approve on behalf of the primary approver</description>
    <label>Delegated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Approval_Matrix_Delegate</relationshipName>
    <type>Lookup</type>
</CustomField>