force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Discount_Label__c.field-meta.xml
<CustomField>
    <fullName>Discount_Label__c</fullName>
    <description>Display label for this discount category (e.g. Rate Discount, Scheme Discount)</description>
    <label>Discount Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>