force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Escalation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Hours__c</fullName>
    <description>Hours after which approval auto-escalates to next level</description>
    <label>Escalation Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>