force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Max_Pct__c.field-meta.xml
<CustomField>
    <fullName>Max_Pct__c</fullName>
    <description>Maximum discount percentage for this approval level</description>
    <label>Max Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>