force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <description>Maximum discount amount for this approval level</description>
    <label>Max Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>