force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Min_Pct__c.field-meta.xml
<CustomField>
    <fullName>Min_Pct__c</fullName>
    <description>Minimum discount percentage for this approval level to apply</description>
    <label>Min Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>