force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <description>Minimum discount amount for this approval level to apply</description>
    <label>Min Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>