force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Profile name filter - limit applies only to users with this profile</description>
    <label>Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>