force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional project scope - limit applies only for this project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Discount Approval Matrix</relationshipLabel>
    <relationshipName>Discount_Approval_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>