force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Role name filter - limit applies only to users with this role</description>
    <label>Role Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>