force-app/main/default/objects/Discount_Approval_Matrix__c/fields/Unit_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Unit_Field_API__c</fullName>
    <description>API name of the Unit__c field this discount applies to (e.g. Super_Builtup_Area__c, Built_up_Area__c). Used for validation: discount value cannot exceed this field&apos;s value on the unit.</description>
    <label>Unit Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>