force-app/main/default/objects/Discount_Approval_Matrix__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific user filter - limit applies only to this user</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Approval_Matrix_User</relationshipName>
    <type>Lookup</type>
</CustomField>