force-app/main/default/objects/Discount_Approval_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Level__c</columns>
    <columns>Discount_Label__c</columns>
    <columns>Discount_Field_Number__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>